[fix]#8447 gap on quality image slider

--- a/css/modules.less
+++ b/css/modules.less
@@ -3668,6 +3668,10 @@ slider, slider.drawing-zone{
 	.filled{
 		background: @primary;
 	}
+	.bar{
+		position: absolute;
+		top: 0;
+	}
 }
 
 recorder{
